  * collection/copyright-file:
    + [NT] Remove code to look for old-style copyright file.
  * collection/file-info{,.desc}:
    + [NT] Compress file-info output and bump version of file-info.
  * collection/hardening-info{,.desc}:
    + [NT] New files.  Thanks to Kees Cook for the patch.
  * collection/index{,.desc}:
    + [NT] Compress index output and bump version of index.
  * collection/objdump-info:
    + [NT] Use "fail" from Lintian::Util.pm rather than embedding a
      copy of it.
    + [NT] Use Lintian::Collect to find ELF files.
    + [NT] Replace all usage of objdump with readelf.
      (Closes: #614034)
    + [NT] Compress objdump-info output and bump version of objdump-info.
  * collection/strings{,.desc}:
    + [NT] Compress strings output and bump version of strings.

  * data:
    + [NT] Move to vendors/debian/ftp-master-auto-reject and replace
      it with a symlink.
  * data/binaries/embedded-libs:
    + [NT] New file.
    + [NT] Add libav libraries.  Thanks to Andres Mejia for the
      suggestion and the suggested patch.  (Closes: #666765)
  * data/binaries/hardening-tags:
    + [NT] New file.
  * data/changes-file/{debian-dists -> known-dists}:
    + [NT] Renamed file.
  * data/menu-format/menu-sections:
    + [NT] New file.

  * frontend/lintian:
    + [JW] Fix typo in error message.
    + [JW,NT] Fix handling of "override" option in the lintianrc file.
      (Closes: #666207)

  * lib/Lintian/Architecture.pm:
    + [NT] Lazily evaluate the data file.
  * lib/Lintian/Collect/Package.pm:
    + [NT] Remove an extra level of quoting in index.
    + [NT] Remove root dir from sorted_index.
    + [NT] Keep trailing slash in dir names for file_info.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Remove sorted_file_info as sorted_index now produces
      an identical list.
  * lib/Lintian/Data.pm:
    + [NT] Lazily load data files.
    + [NT] Allow pre-process sub to alter existing value for a key